test_datasets/generated/syntax_errors/error_4_expected.py
def process_data(data):
    result = sum(data)
    return result
